--- a/package.json
+++ b/package.json
@@ -10,30 +10,33 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "12.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "^3.17.3",
-    "next-auth": "^4.10.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.1.0",
-    "react-query": "^3.39.2",
-    "superjson": "^1.9.1",
-    "@trpc/server": "^9.26.2",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2"
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
+    "next": "12.2.1",
+    "next-auth": "^4.10.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "superjson": "^1.9.1",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.1",
-    "typescript": "4.7.4",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.1.6",
-    "postcss": "^8.4.14",
-    "autoprefixer": "^10.4.7"
+    "typescript": "4.7.4"
   }
 }
