--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "ci-check": "run-p lint typecheck",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -32,6 +34,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.1",
     "eslint-config-prettier": "^8.5.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
