add pusher credentials

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,12 @@
 DATABASE_URL=postgresql://postgres:t7BCzX60GcEx7RtY3ZVz@containers-us-west-81.railway.app:5832/railway
+
 NEXTAUTH_SECRET= <openssl rand -base64 32>
 NEXTAUTH_URL=http://localhost:3000
+
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_CLUSTER=
