--- a/package.json
+++ b/package.json
@@ -10,37 +10,42 @@
     "typecheck": "tsc --noEmit",
     "ci-check": "run-p lint typecheck",
     "postinstall": "prisma generate",
-    "migrate":"prisma migrate dev"
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.1.0",
+    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "date-fns": "^2.29.1",
+    "jotai": "^1.7.6",
     "next": "12.2.1",
-    "next-auth": "^4.10.1",
+    "next-auth": "^4.10.2",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "zod": "^3.17.3"
+    "zod": "^3.17.10"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.1",
+    "@types/node": "18.6.2",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
-    "prisma": "^4.1.0",
-    "tailwindcss": "^3.1.6",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.1.1",
+    "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
 }
