--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pusher-js": "^7.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "zod": "^3.17.10"
