--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.29.1",
     "jotai": "^1.7.6",
     "next": "12.2.1",
@@ -31,7 +32,8 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "zod": "^3.17.10"
+    "zod": "^3.17.10",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
