--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "prisma": "^4.1.1",
     "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
+  },
+  "packageManager": "yarn@1.22.19",
+  "engines": {
+    "node": "^16"
   }
 }
