remove database credntial

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:t7BCzX60GcEx7RtY3ZVz@containers-us-west-81.railway.app:5832/railway
+DATABASE_URL=
 
 NEXTAUTH_SECRET= <openssl rand -base64 32>
 NEXTAUTH_URL=http://localhost:3000
