--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spritzee-next",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,50 +8,55 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "ci-check": "run-p lint typecheck",
+    "format": "prettier -c .",
+    "ci-check": "run-p lint typecheck format",
     "postinstall": "prisma generate",
     "migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@formkit/auto-animate": "1.0.0-beta.6",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.1.1",
-    "@trpc/client": "^9.26.2",
-    "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2",
-    "@trpc/server": "^9.26.2",
+    "@prisma/client": "^4.14.0",
+    "@t3-oss/env-nextjs": "^0.2.1",
+    "@tanstack/react-query": "^4.28.0",
+    "@trpc/client": "^10.18.0",
+    "@trpc/next": "^10.18.0",
+    "@trpc/react-query": "^10.18.0",
+    "@trpc/server": "^10.18.0",
     "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.29.1",
-    "next": "12.2.1",
-    "next-auth": "^4.10.2",
-    "pusher": "^5.1.1-beta",
-    "pusher-js": "^7.3.0",
+    "next": "^13.4.1",
+    "next-auth": "^4.21.0",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-query": "^3.39.2",
-    "superjson": "^1.9.1",
-    "zod": "^3.17.10",
-    "zustand": "^4.0.0"
+    "superjson": "1.12.2",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/node": "18.6.2",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
+    "@types/eslint": "^8.21.3",
+    "@types/node": "^18.15.5",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.1.1",
-    "tailwindcss": "^3.1.7",
-    "typescript": "4.7.4"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.2"
   },
-  "packageManager": "yarn@1.22.19",
-  "engines": {
-    "node": "^16"
+  "ct3aMetadata": {
+    "initVersion": "7.13.0"
   }
 }
